<resources>
    <string name="app_name">Foody</string>
    <string name="food_menu">Food</string>
    <string name="cart_menu">Cart</string>
    <string name="bill_menu">Bill</string>
    <string name="account_menu">Account</string>
    <string name="clear_cart">Clear</string>
    <string name="txt_Cart_Frag">Total:</string>
    <string name="txt2_Cart_Frag">Distance:</string>
    <string name="txt3_Cart_Frag">Shipping Fee:</string>
    <string name="txt4_Cart_Frag">Shipping to:</string>
    <string name="btnPick_address_Cart_Frag">PICK ADDRESS</string>
    <string name="btnOrder_Cart_Frag">ORDER</string>
    <string name="txt_Bill_row">ID Bill:</string>
    <string name="txt2_Bill_row">Time:</string>
    <string name="txt3_Bill_row">Total:</string>
    <string name="your_reviews_frag">Your Feedback</string>
    <string name="skip_feedback">Skip</string>
    <string name="slogan_Feedback_Frag">We are very happy to receive your feedback</string>
    <string name="linkforgetpass">Forgot your password?</string>
    <string name="dieukhoan">term of use.</string>
    <string name="map_api_key">AIzaSyBTwhzVXvilswU_TYmTfxY3tLf2tojpfSE</string>
</resources>